# yomogi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: aozora.md  commands.md  mora.md  scenario.md
src/yomogi/: __init__.py  cli.py
src/yomogi/commands/: __init__.py
src/yomogi/commands/aozora/: __init__.py  annotations.py  catalog.py  command.py  extractor.py  fetcher.py  notation.py
src/yomogi/commands/diff/: __init__.py  command.py  differ.py  renderer.py
src/yomogi/commands/docx2txt/: __init__.py  command.py
src/yomogi/commands/kaiwa/: __init__.py  command.py  extractor.py  renderer.py
src/yomogi/commands/kanaize/: __init__.py  command.py
src/yomogi/commands/mora/: __init__.py  command.py  html_renderer.py  svg_renderer.py
src/yomogi/commands/scenario/: __init__.py  command.py  docx_renderer.py  markup.py  models.py  numbering.py  parser.py  renderer.py  scenario_formatter.py
src/yomogi/japanese/: __init__.py  kana.py  reading.py
tests/: test_cli.py  test_diff.py
tests/aozora/: __init__.py  test_annotations.py  test_catalog.py  test_command.py  test_extractor.py  test_fetcher.py  test_notation.py
tests/japanese/: __init__.py  test_kana.py  test_reading.py
tests/kaiwa/: __init__.py  test_command.py  test_extractor.py  test_renderer.py
tests/kanaize/: __init__.py  test_command.py
tests/mora/: __init__.py  test_analyzer.py  test_command.py  test_html_renderer.py  test_svg_renderer.py
tests/scenario/: test_command.py  test_markup.py  test_numbering.py  test_parser.py  test_renderer.py
(+11 files in other folders)
